fix: add index in category, banner, event and ticket model docs: add swagger docs for ticket and banner API
